--- a/app/components/Home.module.css
+++ b/app/components/Home.module.css
@@ -20,7 +20,7 @@
   .form {
     width: 80%;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #222020;
     border-radius: 10px;
     margin-top: 10px;
   }
@@ -81,7 +81,13 @@
     justify-content: center;
     align-items: center;
   }
-  
+  .containerc {
+    display: flex;
+    align-items: center; 
+  }
+  .container label {
+    margin-right: 30px; 
+  }
   .button:hover {
     background-color: #0056b3;
   }
@@ -89,6 +95,9 @@
   .img {
     display: block;
     margin: 0 auto;
+    filter: drop-shadow(
+       0 4px 8px rgba(0, 0, 0, 0.8));
+       border-radius: 8px;
   }
  .error {
   color: red;
@@ -104,13 +113,30 @@
  justify-content: center;
  align-items: center;
 }
+.textarea {
+  width: 100%; /* O el ancho que prefieras */
+  resize: none; /* Desactiva el redimensionamiento manual */
+  box-sizing: border-box; /* Incluye el padding y border en el tamaño */
+}
 
 
-  /* Optional: Add responsive styles */
-  @media screen and (max-width: 600px) {
-    .form {
-      width: 100%;
+  @media (max-width: 600px) {
+    .buttonGroup {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* Two columns */
+      gap: 10px; /* Adjust the gap between the buttons as needed */
+      justify-content: center; /* Center the grid items horizontally */
+      align-items: center; /* Center the grid items vertically */
+      margin-top: 20px;
     }
+    .form {
+      width: 80%;
+      padding: 20px;
+      border: 1px solid #222020;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+    
     .shape {
     height: 0;
     width: 0;
@@ -177,4 +203,5 @@
     display: block;
     margin: 0 auto;
   }
+
   }
