--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,9 @@
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
     );
-
+    .h1 {
+      color: black;
+    }
     --tile-start-rgb: 2, 13, 46;
     --tile-end-rgb: 2, 5, 19;
     --tile-border: conic-gradient(
@@ -98,6 +100,9 @@ body {
 .text
 {
   color:#00000010;
+}
+.h1 {
+  color: black;
 }
 a {
   color: inherit;
